# arc-agi2

./: .gitignore  CLAUDE.md  pyproject.toml
notebooks/: visualize.ipynb
src/: __init__.py  arc_types.py  grid.py  utils.py
