[project]
name = "arc-agi2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.9",
    "scipy>=1.14",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "rich>=13.9",
    "pytest>=8.3",
    "tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
